add  fading rings effect

--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 <body>
     <div class="info"></div>
     <div class="animated">
+        <div class="fading-ring">
+            <div class="rings">
+                <div class="rings ring-1">
+                    <div class="rings ring-2">
+                        <div class="rings ring-3">
+                            <div class="rings ring-4">
+                                <div class="rings ring-5"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="radar">
             <img src="./Assets/PNG/radar-angle.png" alt="">
         </div>
-        <div class="fading-ring"></div>
         <div class="logo">
             <img src="./Assets/PNG/Logo.png" alt="Antivirus logo">
         </div>
