add information section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Assets/Fonts/Shabnam-Bold.ttf">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Login Page</title>
 </head>
 <body>
-    <div class="info"></div>
+    <div class="info">
+        <div class="form">
+            <div class="route"><p >ورود</p></div>
+            <p style="font-weight: bold; font-size: 20px;">ورود به حساب کاربری</p>
+            <p style="font-weight: 300;">جهت ورود به برنامه نام کاربری و رمز عبور را وارد کنید</p>
+            <div class="inputs">
+                <div class="input-box">
+                    <input class="input" type="text" placeholder="نام کاربری">
+                    <i class="fa fa-user icon"></i>
+                </div>
+                <div class="input-box">
+                    <input class="input" type="text" placeholder="رمز عبور" >
+                    <i class="fa fa-lock icon"></i>
+                    
+                </div>
+                <div class="input-box">
+                    <input class="input" type="text" placeholder="کد امنیتی" >
+                </div>
+            </div>
+            <button class="button">ورود</button>
+            <label style="font-size: 13px;">
+                <input type="checkbox" style="display: inline;"></span>
+                مرا به خاطر بسپار
+            </label>
+            
+        </div>
+    </div>
     <div class="animated">
         <div class="fading-ring">
             <div class="rings">
