fix some minor appearance issues

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="info">
         <div class="form">
             <div class="route"><p >ورود</p></div>
-            <p style="font-weight: bold; font-size: 20px;">ورود به حساب کاربری</p>
-            <p style="font-weight: 300;">جهت ورود به برنامه نام کاربری و رمز عبور را وارد کنید</p>
+            <p style="font-weight: 500; font-size: 30px;">ورود به حساب کاربری</p>
+            <p style="font-weight: lighter; font-size: 16px ; color: #9E9E9E; margin-top: -10px;">جهت ورود به برنامه نام کاربری و رمز عبور را وارد کنید</p>
             <div class="inputs">
                 <div class="input-box">
                     <input class="input" type="text" placeholder="نام کاربری">
@@ -24,16 +24,18 @@
                     <i class="fa fa-lock icon"></i>
                     
                 </div>
-                <div class="input-box">
-                    <input class="input" type="text" placeholder="کد امنیتی" >
+                <div class="input-box" style="width: 60%;">
+                    <input class="input" type="text" placeholder="کد امنیتی"  >
+                    <i class="fa fa-key icon"></i>
                 </div>
             </div>
             <button class="button">ورود</button>
-            <label style="font-size: 13px;">
-                <input type="checkbox" style="display: inline;"></span>
-                مرا به خاطر بسپار
-            </label>
-            
+            <div class="label">
+                <label style="font-size: 13px;">
+                    <input type="checkbox" style="display: inline;"></span>
+                    مرا به خاطر بسپار
+                </label>
+            </div>
         </div>
     </div>
     <div class="animated">
@@ -55,6 +57,9 @@
         </div>
         <div class="logo">
             <img src="./Assets/PNG/Logo.png" alt="Antivirus logo">
+        </div>
+        <div class="footer-message">
+            <p>Multi Antivirus and Cybersecurities</p>
         </div>
     </div>
 </body>
